# aoc-2024

./: .gitignore  README.md  pyproject.toml
day-1/: a.py  b.py
day-2/: a.py  b.py
day-3/: a.py  b.py
